Daypilot Javascript Library

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,6 +28,20 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
 
+    <link href="/css/daypilot.css" rel="stylesheet" type="text/css">
+
+    <!-- datepicker -->
+    <link
+            rel="stylesheet"
+            type="text/css"
+            href="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.css"
+    />
+    <link
+            rel="stylesheet"
+            type="text/css"
+            href="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.css"
+    />
+
     <!--  select-->
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
