--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -10,9 +10,9 @@
     <div class="sidebar pe-4 pb-3">
         <nav class="navbar navbar-light">
             <a th:href="@{/dashboard}" class="navbar-brand mx-4 mb-3">
-                <h3 class="text-primary">
-                    <i class="fa fa-hashtag me-2"></i>DAT
-                </h3>
+                <h5 style="color: #369; font-weight: bold;">
+                    DIR-Ace Technology
+                </h5>
             </a>
             <div class="navbar-nav w-100 gap-2">
                 <a th:href="@{/dashboard}" class="nav-item nav-link"><i
@@ -23,7 +23,7 @@
                     Projects</a>
                 <a th:href="@{/employees}" class="nav-item nav-link"><i class="fa-solid fa-users-rectangle"></i>Employees</a>
                 <a th:href="@{/issue}" class="nav-item nav-link"><i class="fa-solid fa-triangle-exclamation"></i>Issues</a>
-                <a th:href="@{/register}" class="nav-item nav-link"><i class="fa-solid fa-triangle-exclamation"></i>Register</a>
+
 
             </div>
         </nav>
