--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -21,14 +21,24 @@
                 ">
         <div th:replace="fragments/navigation :: navigation-without-search"></div>
 
+
+
         <div class="container-fluid">
-            <table id="table"
-                   class="table bg-white table-bordered table-hover table-responsive table-light"
-                     data-toggle="table"
-                     data-pagination="true"
-                     data-search="true"
+            <div id="toolbar"
+                 class="ms-3"
             >
-                <thead>
+                <a href="/employees/add" class="btn btn-primary">Add Employee</a>
+            </div>
+            <table
+                    id="table"
+                    data-toggle="table"
+                    data-toolbar="#toolbar"
+                    data-toolbar-align="right"
+                    data-search="true"
+            >
+                <thead
+               class="thead-dark text-center text-white font-weight-bold text-uppercase bg-primary rounded shadow-sm p-3 mb-5"
+                >
                 <tr>
                     <th data-sortable="true">ID</th>
                     <th data-sortable="true">Email</th>
@@ -38,6 +48,45 @@
                     <th data-sortable="true">Project Count</th>
                 </tr>
                 </thead>
+
+                <tbody>
+                  <!-- Sample User List -->
+                    <tr>
+                        <td>1</td>
+                        <td>user@user.com</td>
+                        <td>user</td>
+                        <td>IT</td>
+                        <td>Developer</td>
+                        <td>0</td>
+                    </tr>
+                  <tr>
+                      <td>1</td>
+                      <td>user@user.com</td>
+                      <td>yuzer</td>
+                      <td>IT</td>
+                      <td>Developer</td>
+                      <td>0</td>
+                  </tr>
+                  <tr>
+                      <td>1</td>
+                      <td>user@user.com</td>
+                      <td>user</td>
+                      <td>IT</td>
+                      <td>Developer</td>
+                      <td>0</td>
+                  </tr>
+                  <tr>
+                      <td>1</td>
+                      <td>user@user.com</td>
+                      <td>user</td>
+                      <td>IT</td>
+                      <td>Developer</td>
+                      <td>0</td>
+                  </tr>
+                </tbody>
+
+
+
             </table>
         </div>
 <!--        <div th:replace="fragments/footer :: aside"></div>-->
@@ -68,7 +117,8 @@
     $(function () {
         $('#table').bootstrapTable({
         });
-    });
+        $('.bootstrap-table').removeClass('bootstrap4').addClass('bootstrap5');
+        });
 </script>
 </body>
 </html>
