--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -988,55 +988,93 @@
         <script src="/js/custome.js"></script>
         <!-- <script type="module" src="/js/class.js"></script> -->
         <script type="module">
-
             const log = console.log;
 
-            import { Amount, SystemOutline, Project } from "/js/class.js";
+            import { Project } from "/js/class.js";
 
-            const amount = new Amount();
-            const systemOutline = new SystemOutline();
-
-            const project = new Project({systemOutLine: systemOutline});
+            const project = new Project({
+                name: "project name",
+                start_date: 1700000000000,
+                end_date: 1730000000000,
+                userId: 1,
+                clientId: 2,
+                background: "project background",
+                objective: "<p>hello</p>",
+                systemOutLine: {
+                    analysis: true,
+                    sys_design: true,
+                    coding: true,
+                    document: true,
+                },
+                architecutre: [1, 3, 4, 5, 7],
+                deliverable: [1, 3, 4, 5],
+            });
 
             console.log(project);
 
-            document
-                .querySelector("#validation-form")
-                .addEventListener("submit", function (e) {
-                    e.preventDefault();
-                    log("submited");
-                    fetch("/api/project/save", {
-                        method: "POST", // Adjust the method as needed
-                        headers: {
-                            "Content-Type": "application/json",
-                        },
-                        // Define the data you want to send to the server
-                        body: JSON.stringify(
-                            // Define your data here
-                            project
-                        ),
+            function convertDateToMilliseconds(x) {
+                log (x)
+                return new Date(x).getTime();
+            }
+
+            const addProjectForm = document.querySelector("#validation-form");
+
+            addProjectForm.addEventListener("submit", function (e) {
+                e.preventDefault();
+
+                let name = addProjectForm.querySelector("#name").value;
+                console.log(name)
+                let clientId = addProjectForm.querySelector("#client").value;
+                let background = addProjectForm.querySelector("#background").value;
+                let start_date = convertDateToMilliseconds(
+                    addProjectForm.querySelector("#start_date").value
+                );
+                let end_date = convertDateToMilliseconds(
+                    addProjectForm.querySelector("#end_date")
+                );
+                let systemOutlines = Array.from(addProjectForm.querySelector('#systemOutlines').options)
+                    .filter((option) => option.selected)
+                    .reduce(
+                        (obj, option) => ({ ...obj, [option.value]: true }),
+                        {}
+                    );
+
+                log (name, clientId, background, start_date, end_date, systemOutlines)
+
+
+
+                fetch("/api/project/save", {
+                    method: "POST", // Adjust the method as needed
+                    headers: {
+                        "Content-Type": "application/json",
+                    },
+                    // Define the data you want to send to the server
+                    body: JSON.stringify(
+                        // Define your data here
+                        project
+                    ),
+                })
+                    .then((response) => {
+                        if (!response.ok) {
+                            throw new Error("Network response was not ok");
+                        }
+                        return response.json(); // Parse the response as JSON
                     })
-                        .then((response) => {
-                            if (!response.ok) {
-                                throw new Error("Network response was not ok");
-                            }
-                            return response.json(); // Parse the response as JSON
-                        })
-                        .then((data) => {
-                            // Handle the response data here
-                            try {
-                                log(data);
-                                log(data.message)
-                                alert(data.message);
-                            } catch (error) {
-                                log("Error parsing JSON:", error);
-                            }
-                        })
-                        .catch((error) => {
-                            // Handle any errors that occurred during the fetch
-                            log("Fetch error:", error);
-                        });
-                });
+                    .then((data) => {
+                        // Handle the response data here
+                        try {
+                            log(data);
+                            log(data.message);
+                            alert(data.message);
+                        } catch (error) {
+                            log("Error parsing JSON:", error);
+                        }
+                    })
+                    .catch((error) => {
+                        // Handle any errors that occurred during the fetch
+                        log("Fetch error:", error);
+                    });
+            });
 
             const proListFromBack = [
                 {
@@ -1227,32 +1265,6 @@
                     detailMoal.querySelector("");
                 }
             });
-
-            const task = {
-                id: 1,
-                title: "title",
-                description: "description",
-                status: "STARTED",
-                exTime: 42,
-                acTime: 0,
-                group: "A",
-                user: {
-                    id: 1,
-                    name: "zaw",
-                },
-            };
-
-            const issue = {
-                description: "html code block",
-                uploader: {
-                    id: 1,
-                    name: "zawlinshein",
-                },
-                pic: {
-                    id: 3,
-                    name: "blabla",
-                },
-            };
 
             let quillEditors = document.querySelectorAll(
                 ".quill-editor-bubble"
