--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -73,17 +73,23 @@
                             <div class="d-flex justify-content-between align-items-center gap-2">
                                 <div class="d-flex align-items-center gap-2">
                                     <h6 class="card-title">ABCDEFGHIJKLMNOPQRSTUVWXYZ</h6>
-                                    <span class="card-title badge rounded-pill bg-success">Success</span>
-                                </div>
 
+                                    <p class="card-title badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary border border-primary rounded-pill">
+                                       Thant Htet Ko
+                                      </p>
+
+                                    <p class="card-title badge d-flex align-items-center p-1 pe-2 text-warning-emphasis bg-warning border border-warning rounded-pill">
+                                        Ei Ei Phyo
+                                    </p>
+                                </div>
+                                <span class="card-title badge rounded-pill bg-success">Success</span>
                             </div>
 
                             <div class="col d-flex justify-content-between align-items-center issue-time-line d-flex gap-2">
                                 <div class="d-flex align-items-center gap-2">
                                     <p>Posted</p><span>3 days ago</span>
                                     <p>Modified at</p><span>1 minute ago</span>
-                                    <p>PIC : </p><span>Thant Htet Ko</span>
-                                    <p>RP : </p><span>Ei Ei Phyo</span>
+
                                 </div>
                                 <button class="btn btn-primary btn-sm" data-bs-target="#issue-details" data-bs-toggle="modal">
                                     See More
@@ -121,9 +127,19 @@
                             <div class="d-flex justify-content-between align-items-center gap-2">
                                 <div class="d-flex align-items-center gap-2">
                                     <h6 class="card-title">ABCDEFGHIJKLMNOPQRSTUVWXYZ</h6>
-                                    <span class="card-title badge rounded-pill bg-danger">Danger</span>
-                                </div>
 
+
+                                    <p class="card-title badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary border border-primary rounded-pill">
+                                        Phyo Wai Yan Lin Zaw
+                                    </p>
+
+                                    <p class="card-title badge d-flex align-items-center p-1 pe-2 text-warning-emphasis bg-warning border border-warning rounded-pill">
+                                        Zaw Lin Shein
+                                    </p>
+
+
+                                </div>
+                                <span class="card-title badge rounded-pill bg-danger">Danger</span>
 
 
                             </div>
@@ -132,8 +148,6 @@
                             <div class="d-flex align-items-center gap-2">
                                 <p>Posted</p><span>3 days ago</span>
                                 <p>Modified at</p><span>1 minute ago</span>
-                                <p>PIC : </p><span>Phyo Wai Yan Lin Zaw</span>
-                                <p>RP : </p><span>Zaw Lin Shein</span>
                             </div>
                                 <button class="btn btn-primary btn-sm" data-bs-target="#issue-details" data-bs-toggle="modal">
                                     See More
